# orionmail

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: AccentColorProvider.tsx  AppPreferencesContext.tsx  AuthContext.tsx  BackgroundTasksContext.tsx  ComposeModal.tsx  EmailDetail.tsx  EmailList.tsx  GlobalLoader.tsx  LoadingOrion.tsx  LoginPage.tsx  LogoSpinner.tsx  MainLayout.tsx  SessionExpiredPopup.tsx  Sidebar.tsx  SyncContext.tsx  Titlebar.tsx
hooks/: useEmailBody.ts  (+5 more)
src-tauri/: Cargo.toml  cargo_check.json  errors.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/icons-prod/: icon.icns
src-tauri/src/: config.rs  lib.rs  scratch.rs  test_imap.rs  tray_state.rs
src-tauri/src/auth/: account.rs  bootstrap.rs  hello.rs  mod.rs  oauth.rs  session.rs  token_store.rs
src-tauri/src/commands/: auth_commands.rs  message_commands.rs  mod.rs
src-tauri/src/contacts/: contact_indexer.rs  contact_search.rs  contact_store.rs  mod.rs
src-tauri/src/mail/: body_cache.rs  body_prefetch_manager.rs  database.rs  folder.rs  idle.rs  imap_client.rs  imap_session.rs  message_body.rs  message_list.rs  mod.rs  notifications.rs  poll.rs  prefetch.rs  search.rs  shutdown.rs  smtp_client.rs  sync.rs  sync_manager.rs  test_bs.rs
src-tauri/src/mail/extraction/: account.rs  calendar.rs  commerce.rs  invoice.rs  links.rs  mod.rs  otp.rs  provider_registry.rs  schema_org.rs  tracking.rs
(+37 files in other folders)
