[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
window-vibrancy = "0.7.1"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = "1.49.0"
chrono = "0.4.43"
open = "5.3.3"
dotenvy = "0.15.7"
url = "2.5.8"
imap = { version = "2.4.1", features = ["native-tls"] }
native-tls = { version = "0.2.12", features = ["vendored"] }
base64 = "0.22.1"
mailparse = "0.16.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
